--- a/assets/pages/signin.html
+++ b/assets/pages/signin.html
@@ -151,7 +151,7 @@
                       </div>
                       <!-- Submit Button -->
                       <a
-                        href="../pages//home.html"
+                        href="../pages/home.html"
                         class="d-grid mb-3 w-75 m-auto text-decoration-none"
                       >
                         <button
