--- a/assets/pages/donate.html
+++ b/assets/pages/donate.html
@@ -38,9 +38,9 @@
       <nav class="navbar navbar-expand-lg bg-nav border shadow fixed-top">
         <div class="container">
           <!-- Logo -->
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="home.html">
             <img
-              src="assets/image/green_leaves_round_logo.png"
+              src="../image/green_leaves_round_logo.png"
               class="logo"
               style="width: 40px"
               alt="logo"
@@ -56,7 +56,7 @@
           >
             <div class="offcanvas-header bg-nav">
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                <a class="navbar-brand d-block" href="index.html">
+                <a class="navbar-brand d-block" href="home.html">
                   <img
                     src="assets/image/green_leaves_round_logo.png"
                     style="width: 60px"
@@ -91,7 +91,7 @@
 
                 <!-- Menu Items -->
                 <li class="nav-item">
-                  <a class="nav-link fs-5 nav-hover" href="index.html"
+                  <a class="nav-link fs-5 nav-hover" href="home.html"
                     >ទំព័រដើម</a
                   >
                 </li>
@@ -108,7 +108,7 @@
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="frist_doc.html">ឯកសារ</a></li>
                     <li>
-                      <a class="dropdown-item" href="minea.html">វីដេអូ</a>
+                      <a class="dropdown-item" href="video-doc.html">វីដេអូ</a>
                     </li>
                   </ul>
                 </li>
@@ -270,7 +270,7 @@
                 <li>
                   <a class="dropdown-item py-2" href="user_profile.html"
                     ><i class="bi bi-person-circle"></i
-                    ><span class="ms-2">ពត៌មានផ្ទាល់ខ្លួន</span></a
+                    ><span class="ms-2">ព័ត៌មានផ្ទាល់ខ្លួន</span></a
                   >
                 </li>
                 <li>
@@ -282,7 +282,7 @@
                 <li class="border-top">
                   <a class="dropdown-item py-2" href="landing.html"
                     ><i class="bi bi-box-arrow-in-left"></i
-                    ><span class="ms-2">ចាក់ចេញ</span></a
+                    ><span class="ms-2">ចាកចេញ</span></a
                   >
                 </li>
               </ul>
@@ -650,7 +650,7 @@
         <div class="row g-4">
           <div class="col-md-6 col-lg-4">
             <a
-              href="index.html"
+              href="home.html"
               class="footer-img mb-3 d-flex align-items-center"
             >
               <img
