--- a/assets/pages/frist_doc.html
+++ b/assets/pages/frist_doc.html
@@ -29,9 +29,9 @@
       <nav class="navbar navbar-expand-lg bg-nav border shadow fixed-top">
         <div class="container">
           <!-- Logo -->
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="home.html">
             <img
-              src="assets/image/green_leaves_round_logo.png"
+              src="../image/green_leaves_round_logo.png"
               class="logo"
               style="width: 40px"
               alt="logo"
@@ -46,7 +46,7 @@
             aria-labelledby="offcanvasNavbarLabel"
           >
             <div class="offcanvas-header bg-nav">
-              <a class="navbar-brand d-block" href="index.html">
+              <a class="navbar-brand d-block" href="home.html">
                 <img
                   src="assets/image/green_leaves_round_logo.png"
                   class="logo"
@@ -83,7 +83,7 @@
 
                 <!-- Menu Items -->
                 <li class="nav-item">
-                  <a class="nav-link fs-5 nav-hover" href="index.html"
+                  <a class="nav-link fs-5 nav-hover" href="home.html"
                     >ទំព័រដើម</a
                   >
                 </li>
@@ -103,7 +103,7 @@
                       <a class="dropdown-item" href="frist_doc.html">ឯកសារ</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="minea.html">វីដេអូ</a>
+                      <a class="dropdown-item" href="video-doc.html">វីដេអូ</a>
                     </li>
                   </ul>
                 </li>
@@ -267,7 +267,7 @@
                 <li>
                   <a class="dropdown-item py-2" href="user_profile.html"
                     ><i class="bi bi-person-circle"></i
-                    ><span class="ms-2">ពត៌មានផ្ទាល់ខ្លួន</span></a
+                    ><span class="ms-2">ព័ត៌មានផ្ទាល់ខ្លួន</span></a
                   >
                 </li>
                 <li>
@@ -279,7 +279,7 @@
                 <li class="border-top">
                   <a class="dropdown-item py-2" href="landing.html"
                     ><i class="bi bi-box-arrow-in-left"></i
-                    ><span class="ms-2">ចាក់ចេញ</span></a
+                    ><span class="ms-2">ចាកចេញ</span></a
                   >
                 </li>
               </ul>
@@ -439,5 +439,7 @@
         </div>
       </section>
     </main>
+
+    <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
