--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -28,9 +28,9 @@
       <nav class="navbar navbar-expand-lg bg-nav border shadow fixed-top">
         <div class="container">
           <!-- Logo -->
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="home.html">
             <img
-              src="assets/image/green_leaves_round_logo.png"
+              src="../image/green_leaves_round_logo.png"
               class="logo"
               style="width: 40px"
               alt="logo"
@@ -46,9 +46,9 @@
           >
             <div class="offcanvas-header bg-nav">
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                <a class="navbar-brand d-block" href="index.html">
+                <a class="navbar-brand d-block" href="home.html">
                   <img
-                    src="assets/image/green_leaves_round_logo.png"
+                    src="../image/green_leaves_round_logo.png"
                     style="width: 60px"
                     alt="logo"
                   />
@@ -81,7 +81,7 @@
 
                 <!-- Menu Items -->
                 <li class="nav-item">
-                  <a class="nav-link active fs-5 nav-hover" href="index.html"
+                  <a class="nav-link active fs-5 nav-hover" href="home.html"
                     >ទំព័រដើម</a
                   >
                 </li>
@@ -100,7 +100,7 @@
                       <a class="dropdown-item" href="frist_doc.html">ឯកសារ</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="minea.html">វីដេអូ</a>
+                      <a class="dropdown-item" href="video-doc.html">វីដេអូ</a>
                     </li>
                   </ul>
                 </li>
@@ -182,7 +182,7 @@
                   <a class="dropdown-item" href="#">
                     <div class="py-2 d-flex align-items-center">
                       <img
-                        src="assets/image/avatar-4.jpg"
+                        src="../image/avatar-4.jpg"
                         class="rounded-circle"
                         style="width: 40px; height: 40px"
                       />
@@ -202,7 +202,7 @@
                     <a class="dropdown-item" href="#">
                       <div class="py-2 d-flex align-items-center">
                         <img
-                          src="assets/image/avatar-5.jpg"
+                          src="../image/avatar-5.jpg"
                           class="rounded-circle"
                           style="width: 40px; height: 40px"
                         />
@@ -237,7 +237,7 @@
             <!-- Profile Dropdown -->
             <div class="dropdown">
               <img
-                src="assets/image/avatar-4.jpg"
+                src="../image/avatar-4.jpg"
                 alt="Profile"
                 class="avatar dropdown-toggle rounded-circle ms-2"
                 style="width: 40px; height: 40px"
@@ -251,7 +251,7 @@
                     class="dropdown-item d-flex align-items-center py-2"
                   >
                     <img
-                      src="assets/image/avatar-4.jpg"
+                      src="../image/avatar-4.jpg"
                       alt="Avatar"
                       class="rounded-circle mx-2"
                       style="width: 35px; height: 35px"
@@ -262,7 +262,7 @@
                 <li>
                   <a class="dropdown-item py-2" href="user_profile.html"
                     ><i class="bi bi-person-circle"></i
-                    ><span class="ms-2">ពត៌មានផ្ទាល់ខ្លួន</span></a
+                    ><span class="ms-2">ព័ត៌មានផ្ទាល់ខ្លួន</span></a
                   >
                 </li>
                 <li>
@@ -274,7 +274,7 @@
                 <li class="border-top">
                   <a class="dropdown-item py-2" href="landing.html"
                     ><i class="bi bi-box-arrow-in-left"></i
-                    ><span class="ms-2">ចាក់ចេញ</span></a
+                    ><span class="ms-2">ចាកចេញ</span></a
                   >
                 </li>
               </ul>
@@ -297,7 +297,7 @@
     </header>
     <main>
       <section class="hero-banner mt-9 mt-md-0">
-        <img src="assets/image/enviroment.jpg" alt="" class="bg-banner-img" />
+        <img src="../image/enviroment.jpg" alt="" class="bg-banner-img" />
         <div class="overlay"></div>
         <div class="container banner">
           <div class="row d-flex align-items-center">
@@ -325,7 +325,7 @@
             <div class="col-12 col-md-6">
               <div class="banner-img d-none d-md-block">
                 <img
-                  src="assets/image/banner-1.png"
+                  src="../image/banner-1.png"
                   alt=""
                   class="banner-img"
                 />
@@ -341,9 +341,9 @@
           </h2>
           <div class="row g-3">
             <!-- 1 -->
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-3 ">
               <div
-                class="card card-responsive p-4"
+                class="card card-responsive p-4 "
                 data-aos="fade-zoom-in"
                 data-aos-easing="ease-in-back"
                 data-aos-delay="50"
@@ -354,7 +354,7 @@
                     class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
                   >
                     <img
-                      src="assets/image/recycle type/barrel.png"
+                      src="../image/recycle type/barrel.png"
                       alt=""
                       class=""
                     />
@@ -381,7 +381,7 @@
                     class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
                   >
                     <img
-                      src="assets/image/recycle type/machin.png"
+                      src="../image/recycle type/machin.png"
                       alt=""
                       class=""
                     />
@@ -407,7 +407,7 @@
                     class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
                   >
                     <img
-                      src="assets/image/recycle type/organic.png"
+                      src="../image/recycle type/organic.png"
                       alt=""
                       class=""
                     />
@@ -431,7 +431,7 @@
                     class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
                   >
                     <img
-                      src="assets/image/recycle type/energy.png"
+                      src="../image/recycle type/energy.png"
                       alt=""
                       class=""
                     />
@@ -451,22 +451,22 @@
         <div class="slider bg-success">
           <div class="list">
             <div class="slide-item" style="--position: 1">
-              <img src="assets/image/circleclothes.png" alt="" />
+              <img src="../image/circleclothes.png" alt="" />
             </div>
             <div class="slide-item" style="--position: 2">
-              <img src="assets/image/pizza4p.png" alt="" />
+              <img src="../image/pizza4p.png" alt="" />
             </div>
             <div class="slide-item" style="--position: 3">
-              <img src="assets/image/trashisnice.png" alt="" />
+              <img src="../image/trashisnice.png" alt="" />
             </div>
             <div class="slide-item" style="--position: 4">
-              <img src="assets/image/circleclothes.png" alt="" />
+              <img src="../image/circleclothes.png" alt="" />
             </div>
             <div class="slide-item" style="--position: 5">
-              <img src="assets/image/pizza4p.png" alt="" />
+              <img src="../image/pizza4p.png" alt="" />
             </div>
             <div class="slide-item" style="--position: 6">
-              <img src="assets/image/trashisnice.png" alt="" />
+              <img src="../image/trashisnice.png" alt="" />
             </div>
           </div>
         </div>
@@ -499,7 +499,7 @@
                 </div>
                 <div class="col-12 col-md-4">
                   <img
-                    src="assets/image/Environmental Protection.jpg"
+                    src="../image/Environmental Protection.jpg"
                     alt=""
                     class="img-fluid rounded-4"
                     data-aos="flip-left"
@@ -528,7 +528,7 @@
                 </div>
                 <div class="col-12 col-md-4">
                   <img
-                    src="assets/image/energy save.jpg"
+                    src="../image/energy save.jpg"
                     alt=""
                     class="img-fluid"
                     data-aos="flip-left"
@@ -559,7 +559,7 @@
                 </div>
                 <div class="col-12 col-md-4">
                   <img
-                    src="assets/image/climate.jpg"
+                    src="../image/climate.jpg"
                     alt=""
                     class="img-fluid rounded-4"
                     data-aos="flip-left"
@@ -576,7 +576,7 @@
       <section class="section-comment py-8 position-relative">
         <!-- Background image -->
         <img
-          src="assets/image/banner-2.jpg"
+          src="../image/banner-2.jpg"
           alt=""
           class="w-100 h-100 position-absolute top-0 start-0"
           style="object-fit: cover; z-index: 1"
@@ -617,11 +617,11 @@
         <div class="row g-4">
           <div class="col-md-6 col-lg-4">
             <a
-              href="index.html"
+              href="home.html"
               class="footer-img mb-3 d-flex align-items-center"
             >
               <img
-                src="assets/image/green_leaves_round_logo.png"
+                src="../image/green_leaves_round_logo.png"
                 alt="logo"
                 style="width: 50px"
               />
@@ -718,7 +718,7 @@
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/function.js"></script>
+    <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/function.js"></script>
   </body>
 </html>
