--- a/assets/pages/register.html
+++ b/assets/pages/register.html
@@ -102,7 +102,7 @@
                         class="col-sm-2 col-md-7 col-lg-7 text-center m-auto mb-1"
                       >
                         <a
-                          href="index.html"
+                          href="home.html"
                           class="btn btn-success w-100 fw-bolder"
                         >
                           ចុះឈ្មោះ
