--- a/assets/pages/video-doc.html
+++ b/assets/pages/video-doc.html
@@ -10,7 +10,7 @@
       type="image/x-icon"
     />
     <!-- link css -->
-    <link rel="stylesheet" href="assets/minea/css/minea.css" />
+    <link rel="stylesheet" href="../minea/css/minea.css">
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/theme.css" />
     <!-- link bs -->
@@ -26,9 +26,9 @@
       <nav class="navbar navbar-expand-lg bg-nav border shadow fixed-top">
         <div class="container">
           <!-- Logo -->
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="home.html">
             <img
-              src="assets/image/green_leaves_round_logo.png"
+              src="../image/green_leaves_round_logo.png"
               class="logo"
               style="width: 40px"
               alt="logo"
@@ -44,7 +44,7 @@
           >
             <div class="offcanvas-header bg-nav">
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                <a class="navbar-brand d-block" href="index.html">
+                <a class="navbar-brand d-block" href="home.html">
                   <img
                     src="assets/image/green_leaves_round_logo.png"
                     style="width: 60px"
@@ -79,14 +79,14 @@
 
                 <!-- Menu Items -->
                 <li class="nav-item">
-                  <a class="nav-link fs-5 nav-hover" href="index.html"
+                  <a class="nav-link fs-5 nav-hover" href="home.html"
                     >ទំព័រដើម</a
                   >
                 </li>
                 <li class="nav-item dropdown fs-5">
                   <a
                     class="nav-link active dropdown-toggle nav-hover no-caret"
-                    href="minea.html"
+                    href="video-doc.html"
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
@@ -96,7 +96,7 @@
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="frist_doc.html">ឯកសារ</a></li>
                     <li>
-                      <a class="dropdown-item" href="minea.html">វីដេអូ</a>
+                      <a class="dropdown-item" href="video-doc.html">វីដេអូ</a>
                     </li>
                   </ul>
                 </li>
@@ -258,7 +258,7 @@
                 <li>
                   <a class="dropdown-item py-2" href="user_profile.html"
                     ><i class="bi bi-person-circle"></i
-                    ><span class="ms-2">ពត៌មានផ្ទាល់ខ្លួន</span></a
+                    ><span class="ms-2">ព័ត៌មានផ្ទាល់ខ្លួន</span></a
                   >
                 </li>
                 <li>
@@ -270,7 +270,7 @@
                 <li class="border-top">
                   <a class="dropdown-item py-2" href="landing.html"
                     ><i class="bi bi-box-arrow-in-left"></i
-                    ><span class="ms-2">ចាក់ចេញ</span></a
+                    ><span class="ms-2">ចាកចេញ</span></a
                   >
                 </li>
               </ul>
