--- a/assets/pages/video1.html
+++ b/assets/pages/video1.html
@@ -10,7 +10,7 @@
       type="image/x-icon"
     />
     <!-- link css -->
-    <link rel="stylesheet" href="assets/minea/css/minea.css" />
+    <link rel="stylesheet" href="../minea/css/minea.css">
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/theme.css" />
     <!-- link bs -->
@@ -29,9 +29,9 @@
       <nav class="navbar navbar-expand-lg bg-nav border shadow fixed-top">
         <div class="container">
           <!-- Logo -->
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="home.html">
             <img
-              src="assets/image/green_leaves_round_logo.png"
+              src="../image/green_leaves_round_logo.png"
               class="logo"
               style="width: 40px"
               alt="logo"
@@ -47,7 +47,7 @@
           >
             <div class="offcanvas-header bg-nav">
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                <a class="navbar-brand d-block" href="index.html">
+                <a class="navbar-brand d-block" href="home.html">
                   <img
                     src="assets/image/green_leaves_round_logo.png"
                     style="width: 60px"
@@ -82,7 +82,7 @@
 
                 <!-- Menu Items -->
                 <li class="nav-item">
-                  <a class="nav-link fs-5 nav-hover" href="index.html"
+                  <a class="nav-link fs-5 nav-hover" href="home.html"
                     >ទំព័រដើម</a
                   >
                 </li>
@@ -99,7 +99,7 @@
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">ឯកសារ</a></li>
                     <li>
-                      <a class="dropdown-item" href="minea.html">វីដេអូ</a>
+                      <a class="dropdown-item" href="video-doc.html">វីដេអូ</a>
                     </li>
                   </ul>
                 </li>
@@ -262,7 +262,7 @@
                 <li>
                   <a class="dropdown-item py-2" href="user_profile.html"
                     ><i class="bi bi-person-circle"></i
-                    ><span class="ms-2">ពត៌មានផ្ទាល់ខ្លួន</span></a
+                    ><span class="ms-2">ព័ត៌មានផ្ទាល់ខ្លួន</span></a
                   >
                 </li>
                 <li>
@@ -274,7 +274,7 @@
                 <li class="border-top">
                   <a class="dropdown-item py-2" href="landing.html"
                     ><i class="bi bi-box-arrow-in-left"></i
-                    ><span class="ms-2">ចាក់ចេញ</span></a
+                    ><span class="ms-2">ចាកចេញ</span></a
                   >
                 </li>
               </ul>
@@ -307,7 +307,7 @@
                 data-poster="/path/to/poster.jpg"
                 class="rounded-top-2"
               >
-                <source src="assets/minea/video/0919(1).mp4" type="video/mp4" />
+                <source src="../image/video/0919(1).mp4" type="video/mp4" />
 
                 <!-- Captions are optional -->
                 <track
