--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       href="/assets/image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/theme.css" />
+    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/theme.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -28,7 +28,7 @@
         style="height: 70px"
       >
         <div class="container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="home.html">
             <img
               src="assets/image/green_leaves_round_logo.png"
               class="ms-0 ms-md-5 logo"
@@ -44,7 +44,7 @@
             aria-labelledby="offcanvasNavbarLabel"
           >
             <div class="offcanvas-header bg-nav" style="height: 70px">
-              <a class="navbar-brand d-block" href="index.html">
+              <a class="navbar-brand d-block" href="home.html">
                 <img
                   src="assets/image/green_leaves_round_logo.png"
                   style="width: 60px"
@@ -66,7 +66,7 @@
                   <a
                     class="nav-link active fs-5 nav-hover"
                     aria-current="page"
-                    href="index.html"
+                    href="home.html"
                     >ទំព័រដើម</a
                   >
                 </li>
@@ -150,7 +150,7 @@
               >ចូលគណនី</a
             >
             <a
-              href="project-folder/register.html"
+              href="assets/pages/register.html"
               class="btn border border-success mx-1 mt-1 landing-btn register-btn"
               >បង្កើតគណនី</a
             >
@@ -449,7 +449,7 @@
         <div class="row g-4">
           <div class="col-md-6 col-lg-4">
             <a
-              href="index.html"
+              href="home.html"
               class="footer-img mb-3 d-flex align-items-center"
             >
               <img
