fix merge file js

--- a/assets/pages/cart.html
+++ b/assets/pages/cart.html
@@ -217,8 +217,8 @@
       </div>
     </main>
 
-    <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/makara/index.js"></script>
-    <script src="assets/js/function.js"></script>
+    <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <script src="../js/function.js"></script>
   </body>
 </html>
