--- a/assets/pages/e-commerce.html
+++ b/assets/pages/e-commerce.html
@@ -1017,12 +1017,8 @@
         </div>
       </div>
     </footer>
-    <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/makara/index.js"></script>
+    <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="assets/js/function.js"></script>
-    <script>
-      AOS.init();
-    </script>
+    <script src="../js/function.js"></script>
   </body>
 </html>
