--- a/assets/pages/be_eco.html
+++ b/assets/pages/be_eco.html
@@ -443,7 +443,7 @@
         </div>
       </div>
     </main>
-    <script src="assets/js/function.js"></script>
+    <script src="../js/function.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
