--- a/assets/pages/event1.html
+++ b/assets/pages/event1.html
@@ -553,7 +553,7 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="assets/js/function.js"></script>
+    <script src="../js/function.js"></script>
     <script>
       const swiper = new Swiper(".swiper", {
         slidesPerView: 1,
