--- a/assets/pages/user_profile.html
+++ b/assets/pages/user_profile.html
@@ -688,6 +688,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/function.js"></script>
+    <script src="../js/function.js"></script>
   </body>
 </html>
