--- a/assets/pages/video-doc.html
+++ b/assets/pages/video-doc.html
@@ -399,5 +399,5 @@
   </body>
   <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/minea/css/minea.js"></script>
-  <script src="assets/js/function.js"></script>
+  <script src="../js/function.js"></script>
 </html>
