--- a/index.html
+++ b/index.html
@@ -548,6 +548,6 @@
       </div>
     </footer>
     <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/function.js"></script>
+    <script src="../js/function.js"></script>
   </body>
 </html>
