--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -590,14 +590,14 @@
           <div class="row justify-content-center text-center">
             <div class="col-12">
               <h2 class="scale-up-ver-center text-white mb-4 fw-bold">
-                តើអ្នកមានមតិយោបលយ៉ាងណាមកលើគេហទំព័ររបស់ពួកយើង?
+                តើអ្នកមានមតិយោបល់យ៉ាងណាមកលើគេហទំព័ររបស់ពួកយើង?
               </h2>
             </div>
             <div class="col-12 col-md-8 col-lg-6">
               <form action="" class="comment-form p-4 rounded-4 shadow-lg">
                 <textarea
                   class="text-area rounded-3 p-3"
-                  placeholder="មតិយោបល....."
+                  placeholder="មតិយោបល់....."
                   rows="5"
                 ></textarea>
                 <button
