--- a/assets/pages/video1.html
+++ b/assets/pages/video1.html
@@ -181,7 +181,7 @@
                   <a class="dropdown-item" href="#">
                     <div class="py-2 d-flex align-items-center">
                       <img
-                        src="assets/image/avatar-4.jpg"
+                        src="../image/avatar-4.jpg"
                         class="rounded-circle"
                         style="width: 40px; height: 40px"
                       />
@@ -237,7 +237,7 @@
             <!-- Profile Dropdown -->
             <div class="dropdown">
               <img
-                src="assets/image/avatar-4.jpg"
+                src="../image/avatar-4.jpg"
                 alt="Profile"
                 class="avatar dropdown-toggle rounded-circle ms-2"
                 style="width: 40px; height: 40px"
@@ -251,7 +251,7 @@
                     class="dropdown-item d-flex align-items-center py-2"
                   >
                     <img
-                      src="assets/image/avatar-4.jpg"
+                      src="../image/avatar-4.jpg"
                       alt="Avatar"
                       class="rounded-circle mx-2"
                       style="width: 35px; height: 35px"
@@ -459,7 +459,7 @@
     </main>
   </body>
   <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/minea/css/minea.js"></script>
+  
   <!-- vdo js -->
   <script src="path/to/plyr.js"></script>
   <script>
