--- a/assets/pages/be_eco.html
+++ b/assets/pages/be_eco.html
@@ -209,7 +209,8 @@
                         <div class="content ms-3" style="max-width: 220px">
                           <p class="fw-bolder mb-1">John Doe</p>
                           <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                            ការងារថ្មី មានសារសំខាន់ល្អណាស់ តែម៉ូតផលិតផល នៅមានកម្រិត មិនមានភាពទាក់ទាញ។
+                            ការងារថ្មី មានសារសំខាន់ល្អណាស់ តែម៉ូតផលិតផល
+                            នៅមានកម្រិត មិនមានភាពទាក់ទាញ។
                           </p>
                         </div>
                       </div>
@@ -272,11 +273,7 @@
                   >
                 </li>
                 <li class="border-top">
-<<<<<<< HEAD
-                  <a class="dropdown-item py-2" href="../../index.html"
-=======
                   <a class="dropdown-item py-2" href="/index.html"
->>>>>>> 5d734cf2e23f782ba8c4fdd8c1316228ec10a66d
                     ><i class="bi bi-box-arrow-in-left"></i
                     ><span class="ms-2">ចាកចេញ</span></a
                   >
