--- a/assets/pages/feedback.html
+++ b/assets/pages/feedback.html
@@ -77,17 +77,14 @@
                 <a class="nav-link active fw-semibold" href="feedback.html"
                   ><i class="bi bi-chat-left-dots me-2"></i> មតិយោបល់</a
                 >
-                <a class="nav-link fw-semibold" href="#"
-                  ><i class="bi bi-lock me-2"></i> ចូលប្រើគណនី</a
-                >
                 <a class="nav-link fw-semibold" href="setting.html"
                   ><i class="bi bi-gear me-2"></i> ការកំណត់</a
                 >
                 <a class="nav-link fw-semibold" href="note-user.html"
                   ><i class="bi bi-journal me-2"></i> ការកត់ត្រា</a
                 >
-                <a class="nav-link fw-semibold" href="landing.html"
-                  ><i class="bi bi-box-arrow-in-left me-2"></i> ចាក់ចេញ</a
+                <a class="nav-link fw-semibold" href="/index.html"
+                  ><i class="bi bi-box-arrow-in-left me-2"></i> ចាកចេញ</a
                 >
               </nav>
             </div>
@@ -116,8 +113,8 @@
               <a class="nav-link fw-semibold" href="note-user.html"
                 ><i class="bi bi-journal me-2"></i> ការកត់ត្រា</a
               >
-              <a class="nav-link fw-semibold" href="landing.html"
-                ><i class="bi bi-box-arrow-in-left me-2"></i> ចាក់ចេញ</a
+              <a class="nav-link fw-semibold" href="/index.html"
+                ><i class="bi bi-box-arrow-in-left me-2"></i> ចាកចេញ</a
               >
             </nav>
           </div>
@@ -148,7 +145,7 @@
                         <td>1</td>
                         <td>
                           <img
-                            src="assets/vuthy/img/image.png"
+                            src="../image/vuthy/image.png"
                             class="rounded-circle"
                             width="45"
                             height="45"
@@ -163,7 +160,7 @@
                         <td>2</td>
                         <td>
                           <img
-                            src="assets/vuthy/img/image4.png"
+                            src="../image/vuthy/image4.png"
                             class="rounded-circle"
                             width="45"
                             height="45"
@@ -178,7 +175,7 @@
                         <td>3</td>
                         <td>
                           <img
-                            src="assets/vuthy/img/image1.png"
+                            src="../image/vuthy/image1.png"
                             class="rounded-circle"
                             width="45"
                             height="45"
@@ -193,7 +190,7 @@
                         <td>4</td>
                         <td>
                           <img
-                            src="assets/vuthy/img/image2.png"
+                            src="../image/vuthy/image2.png"
                             class="rounded-circle"
                             width="45"
                             height="45"
@@ -208,7 +205,7 @@
                         <td>5</td>
                         <td>
                           <img
-                            src="assets/vuthy/img/image3.png"
+                            src="../image/vuthy/image3.png"
                             class="rounded-circle"
                             width="45"
                             height="45"
@@ -223,7 +220,7 @@
                         <td>6</td>
                         <td>
                           <img
-                            src="assets/vuthy/img/image5.png"
+                            src="../image/vuthy/image5.png"
                             class="rounded-circle"
                             width="45"
                             height="45"
@@ -238,7 +235,7 @@
                         <td>7</td>
                         <td>
                           <img
-                            src="assets/vuthy/img/image8.png"
+                            src="../image/vuthy/image8.png"
                             class="rounded-circle"
                             width="45"
                             height="45"
@@ -253,7 +250,7 @@
                         <td>8</td>
                         <td>
                           <img
-                            src="assets/vuthy/img/image6.png"
+                            src="../image/vuthy/image6.png"
                             class="rounded-circle"
                             width="45"
                             height="45"
@@ -268,7 +265,7 @@
                         <td>9</td>
                         <td>
                           <img
-                            src="assets/vuthy/img/image10.png"
+                            src="../image/vuthy/image10.png"
                             class="rounded-circle"
                             width="45"
                             height="45"
@@ -283,7 +280,7 @@
                         <td>10</td>
                         <td>
                           <img
-                            src="assets/vuthy/img/image9.png"
+                            src="../image/vuthy/image9.png"
                             class="rounded-circle"
                             width="45"
                             height="45"
