--- a/assets/pages/setting.html
+++ b/assets/pages/setting.html
@@ -74,17 +74,14 @@
                 <a class="nav-link fw-semibold" href="feedback.html"
                   ><i class="bi bi-chat-left-dots me-2"></i> មតិយោបល់</a
                 >
-                <a class="nav-link fw-semibold" href="#"
-                  ><i class="bi bi-lock me-2"></i> ចូលប្រើគណនី</a
-                >
                 <a class="nav-link active fw-semibold" href="setting.html"
                   ><i class="bi bi-gear me-2"></i> ការកំណត់</a
                 >
                 <a class="nav-link fw-semibold" href="note-user.html"
                   ><i class="bi bi-journal me-2"></i> ការកត់ត្រា</a
                 >
-                <a class="nav-link fw-semibold" href="landing.html"
-                  ><i class="bi bi-box-arrow-in-left me-2"></i> ចាក់ចេញ</a
+                <a class="nav-link fw-semibold" href="/index.html"
+                  ><i class="bi bi-box-arrow-in-left me-2"></i> ចាកចេញ</a
                 >
               </nav>
             </div>
@@ -113,8 +110,8 @@
               <a class="nav-link fw-semibold" href="note-user.html"
                 ><i class="bi bi-journal me-2"></i> ការកត់ត្រា</a
               >
-              <a class="nav-link fw-semibold" href="landing.html"
-                ><i class="bi bi-box-arrow-in-left me-2"></i> ចាក់ចេញ</a
+              <a class="nav-link fw-semibold" href="/index.html"
+                ><i class="bi bi-box-arrow-in-left me-2"></i> ចាកចេញ</a
               >
             </nav>
           </div>
