--- a/assets/pages/forgetpassword.html
+++ b/assets/pages/forgetpassword.html
@@ -86,6 +86,6 @@
       </section>
     </main>
     <!-- Bootstrap JS -->
-    <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
