--- a/assets/pages/video-doc.html
+++ b/assets/pages/video-doc.html
@@ -10,7 +10,7 @@
       type="image/x-icon"
     />
     <!-- link css -->
-    <link rel="stylesheet" href="../minea/css/minea.css">
+    <link rel="stylesheet" href="../minea/css/minea.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/theme.css" />
     <!-- link bs -->
@@ -46,7 +46,7 @@
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
                 <a class="navbar-brand d-block" href="home.html">
                   <img
-                    src="assets/image/green_leaves_round_logo.png"
+                    src="../image/green_leaves_round_logo.png"
                     style="width: 60px"
                     alt="logo"
                   />
@@ -94,7 +94,9 @@
                     អត្ថបទ
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="frist_doc.html">ឯកសារ</a></li>
+                    <li>
+                      <a class="dropdown-item" href="frist_doc.html">ឯកសារ</a>
+                    </li>
                     <li>
                       <a class="dropdown-item" href="video-doc.html">វីដេអូ</a>
                     </li>
@@ -128,6 +130,9 @@
                 </li>
                 <li class="nav-item fs-5">
                   <a class="nav-link nav-hover" href="about.html">អំពីយើង</a>
+                </li>
+                <li class="nav-item fs-5">
+                  <a class="nav-link nav-hover" href="/index.html">ចាកចេញ</a>
                 </li>
               </ul>
             </div>
@@ -178,7 +183,7 @@
                   <a class="dropdown-item" href="#">
                     <div class="py-2 d-flex align-items-center">
                       <img
-                        src="assets/image/avatar-4.jpg"
+                        src="../image/avatar-4.jpg"
                         class="rounded-circle"
                         style="width: 40px; height: 40px"
                       />
@@ -198,14 +203,15 @@
                     <a class="dropdown-item" href="#">
                       <div class="py-2 d-flex align-items-center">
                         <img
-                          src="assets/image/avatar-5.jpg"
+                          src="../image/avatar-5.jpg"
                           class="rounded-circle"
                           style="width: 40px; height: 40px"
                         />
                         <div class="content ms-3" style="max-width: 220px">
                           <p class="fw-bolder mb-1">John Doe</p>
                           <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                            ការងារថ្មី មានសារសំខាន់ល្អណាស់ តែម៉ូតផលិតផល នៅមានកម្រិត មិនមានភាពទាក់ទាញ។
+                            ការងារថ្មី មានសារសំខាន់ល្អណាស់ តែម៉ូតផលិតផល
+                            នៅមានកម្រិត មិនមានភាពទាក់ទាញ។
                           </p>
                         </div>
                       </div>
@@ -233,7 +239,7 @@
             <!-- Profile Dropdown -->
             <div class="dropdown">
               <img
-                src="assets/image/avatar-4.jpg"
+                src="../image/avatar-4.jpg"
                 alt="Profile"
                 class="avatar dropdown-toggle rounded-circle ms-2"
                 style="width: 40px; height: 40px"
@@ -247,7 +253,7 @@
                     class="dropdown-item d-flex align-items-center py-2"
                   >
                     <img
-                      src="assets/image/avatar-4.jpg"
+                      src="../image/avatar-4.jpg"
                       alt="Avatar"
                       class="rounded-circle mx-2"
                       style="width: 35px; height: 35px"
@@ -268,7 +274,7 @@
                   >
                 </li>
                 <li class="border-top">
-                  <a class="dropdown-item py-2" href="landing.html"
+                  <a class="dropdown-item py-2" href="/index.html"
                     ><i class="bi bi-box-arrow-in-left"></i
                     ><span class="ms-2">ចាកចេញ</span></a
                   >
@@ -307,7 +313,6 @@
                   </div>
                   <p class="card-text m-3">
                     ប្រយោជន៍នៃកាកកាហ្វេចំពោះដំណាំដែលអ្នកមិននឹកស្មានដល់
-
                   </p>
                 </div>
               </a>
@@ -323,7 +328,7 @@
                     />
                   </div>
                   <p class="card-text m-3">
-                   ការកែច្នៃសំរាមប្លាស្ទិកក្លាយជាគ្រឿងសំណង់និងគ្រឿងសង្ហារឹម
+                    ការកែច្នៃសំរាមប្លាស្ទិកក្លាយជាគ្រឿងសំណង់និងគ្រឿងសង្ហារឹម
                   </p>
                 </div>
               </a>
@@ -339,7 +344,8 @@
                     />
                   </div>
                   <p class="card-text m-3">
-                   ពីសំណល់កាកអំពៅ ក្លាយទៅជាចានបរិស្ថានគ្មានជាតិគីមី និងងាយស្រួលប្រើប្រាស់
+                    ពីសំណល់កាកអំពៅ ក្លាយទៅជាចានបរិស្ថានគ្មានជាតិគីមី
+                    និងងាយស្រួលប្រើប្រាស់
                   </p>
                 </div>
               </a>
@@ -355,7 +361,7 @@
                     />
                   </div>
                   <p class="card-text m-3">
-                  កាកសំណល់ផ្ទះបាយ ក្លាយជាជីដ៏មានតម្លៃចំពោះដំណាំ
+                    កាកសំណល់ផ្ទះបាយ ក្លាយជាជីដ៏មានតម្លៃចំពោះដំណាំ
                   </p>
                 </div>
               </a>
@@ -370,9 +376,7 @@
                       class="rounded-3"
                     />
                   </div>
-                  <p class="card-text m-3">
-                    ធុងសំរាមដែលច្នៃពីសំបកកង់ឡាន
-                  </p>
+                  <p class="card-text m-3">ធុងសំរាមដែលច្នៃពីសំបកកង់ឡាន</p>
                 </div>
               </a>
             </div>
@@ -397,7 +401,6 @@
       </section>
     </main>
   </body>
-  <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/minea/css/minea.js"></script>
-  <script src="assets/js/function.js"></script>
+  <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/function.js"></script>
 </html>
