--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -133,6 +133,9 @@
                 <li class="nav-item fs-5">
                   <a class="nav-link nav-hover" href="about.html">អំពីយើង</a>
                 </li>
+                <li class="nav-item fs-5">
+                  <a class="nav-link nav-hover" href="/index.html">ចាកចេញ</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -209,7 +212,8 @@
                         <div class="content ms-3" style="max-width: 220px">
                           <p class="fw-bolder mb-1">John Doe</p>
                           <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                            ការងារថ្មី មានសារសំខាន់ល្អណាស់ តែម៉ូតផលិតផល នៅមានកម្រិត មិនមានភាពទាក់ទាញ។
+                            ការងារថ្មី មានសារសំខាន់ល្អណាស់ តែម៉ូតផលិតផល
+                            នៅមានកម្រិត មិនមានភាពទាក់ទាញ។
                           </p>
                         </div>
                       </div>
@@ -272,7 +276,7 @@
                   >
                 </li>
                 <li class="border-top">
-                  <a class="dropdown-item py-2" href="landing.html"
+                  <a class="dropdown-item py-2" href="/index.html"
                     ><i class="bi bi-box-arrow-in-left"></i
                     ><span class="ms-2">ចាកចេញ</span></a
                   >
@@ -324,11 +328,7 @@
             </div>
             <div class="col-12 col-md-6">
               <div class="banner-img d-none d-md-block">
-                <img
-                  src="../image/banner-1.png"
-                  alt=""
-                  class="banner-img"
-                />
+                <img src="../image/banner-1.png" alt="" class="banner-img" />
               </div>
             </div>
           </div>
@@ -341,9 +341,9 @@
           </h2>
           <div class="row g-3">
             <!-- 1 -->
-            <div class="col-6 col-md-3 ">
+            <div class="col-6 col-md-3">
               <div
-                class="card card-responsive p-4 "
+                class="card card-responsive p-4"
                 data-aos="fade-zoom-in"
                 data-aos-easing="ease-in-back"
                 data-aos-delay="50"
@@ -720,5 +720,12 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/function.js"></script>
+    <script>
+      // AOS Animation
+      AOS.init({
+        duration: 1000,
+        once: false, // run loop
+      });
+    </script>
   </body>
 </html>
