--- a/assets/pages/newpassword.html
+++ b/assets/pages/newpassword.html
@@ -107,6 +107,6 @@
     </main>
 
     <!-- Bootstrap JS -->
-    <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
