--- a/assets/pages/note-user.html
+++ b/assets/pages/note-user.html
@@ -1019,6 +1019,6 @@
     </main>
   </body>
 
-  <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </html>
