--- a/assets/pages/user_pin.html
+++ b/assets/pages/user_pin.html
@@ -103,6 +103,6 @@
     </main>
 
     <!-- Bootstrap JS -->
-    <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
