--- a/assets/pages/user_setting.html
+++ b/assets/pages/user_setting.html
@@ -60,7 +60,7 @@
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
                 <a class="navbar-brand d-block" href="home.html">
                   <img
-                    src="assets/image/green_leaves_round_logo.png"
+                    src="../image/green_leaves_round_logo.png"
                     style="width: 60px"
                     alt="logo"
                   />
@@ -143,6 +143,9 @@
                 <li class="nav-item fs-5">
                   <a class="nav-link nav-hover" href="about.html">អំពីយើង</a>
                 </li>
+<li class="nav-item fs-5">
+                  <a class="nav-link nav-hover" href="/index.html">ចាកចេញ</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -192,7 +195,7 @@
                   <a class="dropdown-item" href="#">
                     <div class="py-2 d-flex align-items-center">
                       <img
-                        src="assets/image/avatar-4.jpg"
+                        src="../image/avatar-4.jpg"
                         class="rounded-circle"
                         style="width: 40px; height: 40px"
                       />
@@ -212,7 +215,7 @@
                     <a class="dropdown-item" href="#">
                       <div class="py-2 d-flex align-items-center">
                         <img
-                          src="assets/image/avatar-5.jpg"
+                          src="../image/avatar-5.jpg"
                           class="rounded-circle"
                           style="width: 40px; height: 40px"
                         />
@@ -248,7 +251,7 @@
             <!-- Profile Dropdown -->
             <div class="dropdown">
               <img
-                src="assets/image/avatar-4.jpg"
+                src="../image/avatar-4.jpg"
                 alt="Profile"
                 class="avatar dropdown-toggle rounded-circle ms-2"
                 style="width: 40px; height: 40px"
@@ -262,7 +265,7 @@
                     class="dropdown-item d-flex align-items-center py-2"
                   >
                     <img
-                      src="assets/image/avatar-4.jpg"
+                      src="../image/avatar-4.jpg"
                       alt="Avatar"
                       class="rounded-circle mx-2"
                       style="width: 35px; height: 35px"
@@ -283,7 +286,7 @@
                   >
                 </li>
                 <li class="border-top">
-                  <a class="dropdown-item py-2" href="landing.html"
+                  <a class="dropdown-item py-2" href="/index.html"
                     ><i class="bi bi-box-arrow-in-left"></i
                     ><span class="ms-2">ចាកចេញ</span></a
                   >
