--- a/assets/pages/e-commerce.html
+++ b/assets/pages/e-commerce.html
@@ -338,7 +338,7 @@
             class="fw-bold fs-kp text-center display-5 mt-10 mb-6"
             data-aos="fade-left"
           >
-            ផលិតផលប្លាស្ទិចកែច្នៃ
+            ផលិតផលប្លាស្ទិកកែច្នៃ
           </h3>
           <div class="row gy-4">
             <!-- Product 1 -->
@@ -413,7 +413,7 @@
                   <i class="fa-solid fa-star text-warning"></i>
                   <i class="fa-solid fa-star-half-stroke text-warning"></i>
                   <h1 class="card-title mt-2 fs-kp" style="font-size: 22px">
-                    <span>ឈ្មោះ​ ៖</span>​កៅស៊ូ ប្លាស្ទិចថ្លា
+                    <span>ឈ្មោះ​ ៖</span>​កៅស៊ូ ប្លាស្ទិកថ្លា
                   </h1>
                   <p class="card-text fs-kp">តម្លៃ៖​ <span>$75.00</span></p>
                   <div
@@ -469,7 +469,7 @@
                   <i class="fa-solid fa-star text-warning"></i>
                   <i class="fa-solid fa-star-half-stroke text-warning"></i>
                   <h1 class="card-title mt-2 fs-kp" style="font-size: 22px">
-                    <span>ឈ្មោះ​ ៖</span>​តុប្លាស្ទិច
+                    <span>ឈ្មោះ​ ៖</span>​តុប្លាស្ទិក
                   </h1>
                   <p class="card-text fs-kp">តម្លៃ៖​ <span>$10.00</span></p>
                   <div
@@ -525,7 +525,7 @@
                   <i class="fa-solid fa-star text-warning"></i>
                   <i class="fa-solid fa-star-half-stroke text-warning"></i>
                   <h1 class="card-title mt-2 fs-kp" style="font-size: 22px">
-                    <span>ឈ្មោះ​ ៖</span>​ដបប្លាស្ទិច
+                    <span>ឈ្មោះ​ ៖</span>​ដបប្លាស្ទិក
                   </h1>
                   <p class="card-text fs-kp">តម្លៃ៖​ <span>$3.00</span></p>
                   <div
@@ -581,7 +581,7 @@
                   <i class="fa-solid fa-star text-warning"></i>
                   <i class="fa-solid fa-star-half-stroke text-warning"></i>
                   <h1 class="card-title mt-2 fs-kp" style="font-size: 22px">
-                    <span>ឈ្មោះ​ ៖</span>​ធុងទឹកប្លាស្ទិច
+                    <span>ឈ្មោះ​ ៖</span>​ធុងទឹកប្លាស្ទិក
                   </h1>
                   <p class="card-text fs-kp">តម្លៃ៖​ <span>$7.00</span></p>
                   <div
