--- a/assets/pages/note-user.html
+++ b/assets/pages/note-user.html
@@ -160,7 +160,7 @@
                         <td class="text-center">2025-09-15</td>
                         <td class="text-center">
                           <div class="btn-group btn-group-sm">
-                            <a href="#" class="btn btn-outline-success">
+                            <a href="user_setting.html" class="btn btn-outline-success">
                               <i class="bi bi-pencil-square"></i>
                             </a>
                           </div>
