--- a/landing.html
+++ b/landing.html
@@ -27,7 +27,7 @@
         class="navbar bg-nav fixed-top navbar-expand-lg"
         style="height: 70px"
       >
-        <div class="container-fluid">
+        <div class="container">
           <a class="navbar-brand" href="#">
             <img
               src="assets/image/green_leaves_round_logo.png"
@@ -37,7 +37,7 @@
             />
           </a>
 
-          <div
+          <!-- <div
             class="offcanvas offcanvas-start"
             tabindex="-1"
             id="offcanvasNavbar"
@@ -102,7 +102,7 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </div> -->
           <div class="user-login d-flex align-items-center">
             <button
               class="navbar-toggler fs-6 mt-1 landing-nav"
