--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -309,7 +309,7 @@
                 id="text-animation"
               ></h6>
               <h2 class="mt-3 text-fs">
-                សាមគ្គីគ្នានាំមកនៅការជោគជ័យ, ចូររួមទាំងអស់គ្នាដើម្បី<span
+                សាមគ្គីគ្នានាំមកនៅការជោគជ័យ, ចូលរួមទាំងអស់គ្នាដើម្បី<span
                   class="text-success"
                   >បរិស្ថាន</span
                 >
