--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="col-12 col-md-6">
               <h6 class="text-success fs-6 mt-5" id="text-animation"></h6>
               <h2 class="mt-3 text-fs">
-                សាមគ្គីគ្នានាំមកនៅការជោគជ័យ, ចូររួមទាំងអស់គ្នាដើម្បី<span
+                សាមគ្គីគ្នានាំមកនៅការជោគជ័យ, ចូលរួមទាំងអស់គ្នាដើម្បី<span
                   class="text-success"
                   >បរិស្ថាន</span
                 >
@@ -551,8 +551,8 @@
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-      <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="../js/function.js"></script>
+    <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/function.js"></script>
     <script>
       // AOS Animation
       AOS.init({
